apps/hepta-native/src/ui/snapshots/binding_preparation_and_stale_projection.snap
---
source: src/ui/binding_prepare_snapshot_tests.rs
expression: rendered
---
=== Preparing ===
Authenticated view available
Refresh
Reconcile
Preparing exact binding
Native operations
Prepare, authorize, then observe one bounded action
The shell never signs its own authority. Prepare the exact binding, have the independent authority owner issue a SignedFinalUseGrant, then select that grant file for one final-use operation.
01 / Action details
Authority subject
test.subject
Operation ID
test.operation
Action
Copy text
Clipboard text
original clipboard payload
02 / Independent authorization
Signed grant path
Choose file
Use next dropped file
Prepare exact binding
Execute with signed grant
03 / Operation receipts
Indeterminate operations are never automatically replayed. Reconcile asks the platform adapter for a trustworthy terminal observation.
Archive closed history (retain last 256)
No operation receipts.

=== Stale result ===
Authenticated view available
Refresh
Reconcile
Native operations
Prepare, authorize, then observe one bounded action
The shell never signs its own authority. Prepare the exact binding, have the independent authority owner issue a SignedFinalUseGrant, then select that grant file for one final-use operation.
01 / Action details
Authority subject
test.subject
Operation ID
test.operation
Action
Copy text
Clipboard text
edited clipboard payload
02 / Independent authorization
Signed grant path
Choose file
Use next dropped file
Prepare exact binding
Execute with signed grant
Prepared binding discarded because the input, screen or view changed; prepare it again.
03 / Operation receipts
Indeterminate operations are never automatically replayed. Reconcile asks the platform adapter for a trustworthy terminal observation.
Archive closed history (retain last 256)
No operation receipts.
