apps/hepta-native/src/ui/snapshots/native_chat_large_text.snap
---
source: src/ui/shell_view_tests.rs
expression: observed
---
HEPTA
Chat
Console
Back
Local fixture
Messaging is not connected
Message
Send
Write a message…
Space for your ideas
No messages in this conversation yet.
This runtime does not provide an authenticated messaging connection yet.
