apps/hepta-native/src/ui/snapshots/native_chat_narrow.snap
---
source: src/ui/shell_view_tests.rs
expression: observed
---
HEPTA
Chat
Console
Conversations
A place to think together
New conversation
Refresh
Search conversations
No conversations to show
Messaging is not connected
Messaging needs an operator-provided chat configuration. Start Hepta with --chat-config and its absolute path.
