apps/hepta-native/src/ui/snapshots/native_chat_older_page.snap
---
source: src/ui/shell_view_tests.rs
expression: observed
---
HEPTA
Chat
Console
Back to conversations
Message
Unsent thought
Draft stays here until you send
Send
Fixture history
Messaging is not connected
Older messages
Back to latest
F
Fixture
Previously observed message
