apps/hepta-native/src/ui/snapshots/native_chat_selected_offline.snap
---
source: src/ui/shell_view_tests.rs
expression: observed
---
HEPTA
Chat
Console
Back to conversations
Message
Unsent draft
Draft stays here until you send
Send
Local fixture
Messaging is offline
F
Fixture sender
12:00
Observed fixture message
