apps/hepta-native/src/ui/snapshots/native_chat_wide.snap
---
source: src/ui/shell_view_tests.rs
expression: observed
---
HEPTA
Chat
Console
Conversations
A place to think together
New conversation
Refresh
Search conversations
No conversations to show
Messaging is not connected
Messaging needs an operator-provided chat configuration. Start Hepta with --chat-config and its absolute path.
Message
Write a message…
Draft stays here until you send
Send
Your next conversation
Messaging is not connected
Space for your ideas
Choose a conversation to read its messages.
This runtime does not provide an authenticated messaging connection yet.
