apps/hepta-native/src/ui/snapshots/native_shell_normal.snap
---
source: src/ui/shell_view_tests.rs
expression: stable
---
HEPTA
Chat
Console
No current authenticated view
Refresh
Reconcile
WORKSPACE
Runtime
Operations
Updates
Accessibility
Runtime overview
Authenticated observations from the local gateway
No runtime snapshot.
Refresh to request a current authenticated view. Actions requiring that view remain unavailable.
CONNECTION DETAILS
Endpoint: 127.0.0.1:9
Platform: <host>
