apps/hepta-native/src/ui/snapshots/robrix_owner_status_transitions.snap
---
source: src/ui/robrix_host_tests.rs
expression: status_text
---
Verifying runtime view
Closing safely: waiting for owned workers and runtime cleanup
Runtime close confirmed
