apps/hepta-native/src/ui/snapshots/startup_recovery_advanced.snap
---
source: src/ui/startup_recovery_tests.rs
expression: rendered
---
HEPTA
Startup needs attention
Native initialization
Close this window and resolve the reported startup failure before launching again. Do not delete the operation journal or replay an unknown operation.
Technical details
fixture: configured input /operator/config.json is unavailable
Initialization has advanced beyond the input-only boundary. This screen will not repeat recovery, session admission or native operations.
Exit
